# alisa-gpt-assistant

./: .env.en.example  .env.example  .env.ru.example  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
src/alisa_gpt_assistant/: __init__.py  assistant.py  conversation.py  open_ai_client.py  protocols.py  session_dialog.py  stubs.py
src/alisa_gpt_assistant/fast_api/: __init__.py  message_source.py  webhook_processor.py
src/alisa_gpt_assistant/gpt/: __init__.py  assistant_dialog_factory.py
src/alisa_gpt_assistant/session/: __init__.py  background_message_processing.py  long_text_reader.py  long_text_reader_test.py  session_dialog.py
src/alisa_gpt_assistant/yandex_dialogs/: __init__.py  request_to_response.py
